--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "~3.2.6",
     "jade": "~0.31.2",
     "mongoose": "~3.8.5",
+    "connect-assets": "~2.5.4",
     "passport": "~0.2.0",
     "passport-facebook": "~1.0.2",
     "passport-github": "~0.1.5",
