--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "express": "~3.2.6",
     "jade": "~0.31.2",
+    "less": "*",
     "mongoose": "~3.8.5",
     "connect-assets": "~2.5.4",
     "passport": "~0.2.0",
